<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ve.gob.fundelec.simlec.Login.ui.LoginActivity">

    <ImageView
        android:padding="@dimen/margi_extra_corto"
        android:src="@drawable/fundelec_corpoelec"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView2" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_solo"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />

            <TextView
                android:padding="@dimen/margi_extra_corto"
                android:textSize="@dimen/titulo_size"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:text="@string/nombre_proyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/usuario_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/mini_text"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:hint="@string/hint_usuario" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/mini_text"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/margi_extra_corto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:drawableTint="@color/background"
                    android:id="@+id/lector"
                    android:background="@color/background"
                    android:text="@string/lector"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:drawableTint="@color/background"
                    android:id="@+id/supervisor"
                    android:clickable="true"
                    android:text="@string/supervisor"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:drawableTint="@color/background"
                    android:id="@+id/administrador"
                    android:text="@string/administrador"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <Button
                android:id="@+id/iniciar"
                android:layout_marginTop="@dimen/margi_extra_corto"
                android:background="@color/colorPrimary"
                android:text="@string/iniciar"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </ScrollView>

</RelativeLayout>




